--- a/frontend-sorce-code/device_application_source_code/clever-biz-mobile-main/src/main.css
+++ b/frontend-sorce-code/device_application_source_code/clever-biz-mobile-main/src/main.css
@@ -1,6 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 
+/* Force Input Color Visibility */
+input,
+textarea,
+select {
+  color: #000000 !important;
+  -webkit-text-fill-color: #000000 !important;
+}
+
+
 @theme {
   --color-primary: hsl(221 83% 53%);
   --color-accent: hsl(221 83% 53%);
